[package]
name = "api_v1"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = [ "serde", "iana-time-zone", "alloc" ] }
time = { version = "0.3.22", features = [ "serde-human-readable", "parsing", "std", "formatting" ] }
serde = { version = "1.0.164", features = [ "derive" ] }
uuid = { version = "1.3.4", features = [ "v4" ] }
mac_address = { version = "1.1.5"}
serde_json = "1.0.96"
thiserror = "1.0.40"
