[package]
name = "cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1", features = [ "full" ] }
time = { version = "0.3.22", features = [ "parsing" ] }
serde_json = "1.0.96"
clap = { version = "4.3.4", features = [ "derive" ] }
rpassword = "7.2.0"
keyring = "2.0.3"

client = { path = "../client" }
api_v1 = { path = "../api_v1" }
