[package]
name = "client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = [ "json", "cookies", "stream" ] }
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.96"
tokio = { version = "1", features = [ "full" ] }
time = { version = "0.3.22", features = [ "parsing" ] }
thiserror = "1.0.40"

api_v1 = { path = "../api_v1" }
regex = "1.8.4"
once_cell = "1.18.0"
